--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,19 @@
+1999-08-05  Katsumi Yamaoka   <yamaoka@jpl.org>
+
+	* MU-CITE: Version 8.0 was released.
+
+1999-08-05  Katsumi Yamaoka   <yamaoka@jpl.org>
+
+	* mu-cite.el (detect-paragraph-cited-prefix): Use `car' and `cdr'
+	instead of `cadr'.
+
+	* mu-register.el (mu-cite-save-registration-file): Remove text
+	properties from the strings to be registered and quote them using
+	`prin1-to-string'.
+
+	* Makefile (PACKAGE): Rename from "mu" to "mu-cite".
+	(invoice): New target.
+
 1999-08-03  Katsumi Yamaoka   <yamaoka@jpl.org>
 
 	* mu-register.el (mu-cite-get-prefix-register-verbose-method): Bind
