--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+1999-08-23  Katsumi Yamaoka   <yamaoka@jpl.org>
+
+	* mu-cite.el (TopLevel): Don't require `widget'.
+
+
 1999-08-05  Katsumi Yamaoka   <yamaoka@jpl.org>
 
 	* MU-CITE: Version 8.0 was released.
