--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-10-19  Katsumi Yamaoka   <yamaoka@jpl.org>
+
+	* mu-cite.el (fill-cited-region): Bind `filladapt-mode' to nil.
+
 1999-10-15  Katsumi Yamaoka   <yamaoka@jpl.org>
 
 	* mu-cite.el (fill-cited-region): Increase `fill-column' if
