--- a/README.en
+++ b/README.en
@@ -119,14 +119,15 @@ Bug reports
 -----------
 
   If you write bug-reports and/or suggestions for improvement, please
-  send them to the tm Mailing List:
+  send them to Elips Mailing List:
 
-	bug-tm-en@chamonix.jaist.ac.jp	(English)
-	bug-tm-ja@chamonix.jaist.ac.jp	(Japanese)
+	Elips@eos.hokudai.ac.jp
 
-  Via the tm ML, you can report tm bugs, obtain the latest release of
-  tm, and discuss future enhancements to tm. To join the tm ML, send
-  an empty e-mail to
+  Elips mailing list is for discussing all sorts of Emacsen, mainly in
+  Japanese.  To join Elips ML, please introduce yourself briefly in an
+  e-mail to
 
-	tm-en-help@chamonix.jaist.ac.jp	(English)
-	tm-ja-help@chamonix.jaist.ac.jp	(Japanese)
+	Elips-request@eos.hokudai.ac.jp
+
+  Via Elips ML, you can report MU-CITE related bugs, obtain the latest
+  release of MU-CITE, and discuss future enhancements to MU-CITE.
