--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+1999-12-13  Katsumi Yamaoka   <yamaoka@jpl.org>
+
+	* README.en: Update fot the recent ML address.
+
 1999-10-19  Katsumi Yamaoka   <yamaoka@jpl.org>
 
 	* mu-cite.el (fill-cited-region): Bind `filladapt-mode' to nil.
