--- a/NEWS
+++ b/NEWS
@@ -1,8 +1,33 @@
 MU-CITE NEWS -- history of major-changes.
 Copyright (C) 1999 Free Software Foundation, Inc.
 
-* Changes in MU-CITE 8.0
+* Changes in MU-CITE 8.1
+========================
 
+** The obsolete variables and functions are ignored
+Don't use the following variables and functions:
+
+  mu-cite/cited-prefix-regexp
+  mu-cite/default-methods-alist
+  mu-cite/get-field-value-method-alist
+  mu-cite/instantiation-hook
+  mu-cite/ml-count-field-list
+  mu-cite/post-cite-hook
+  mu-cite/pre-cite-hook
+  mu-cite/prefix-format
+  mu-cite/top-format
+
+  mu-cite/registration-file
+  mu-cite/allow-null-string-registration
+  mu-cite/registration-symbol
+
+  mu-cite/cite-original
+  mu-cite/get-field-value
+  mu-cite/get-value
+
+
+* Changes in MU-CITE 8.0
+========================
 
 ** Requires APEL 9.20 or later
 
