--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+1999-12-16  Katsumi Yamaoka   <yamaoka@jpl.org>
+
+	* MU-CITE: Version 8.1 was released.
+
+1999-12-16  Katsumi Yamaoka   <yamaoka@jpl.org>
+
+	* mu-register.el: Ignore the obsolete variables.
+
+	* mu-cite.el: Ignore the obsolete variables and functions.
+
 1999-12-13  Katsumi Yamaoka   <yamaoka@jpl.org>
 
 	* README.en: Update fot the recent ML address.
