--- a/ChangeLog
+++ b/ChangeLog
@@ -10,7 +10,7 @@
 
 1999-12-13  Katsumi Yamaoka   <yamaoka@jpl.org>
 
-	* README.en: Update fot the recent ML address.
+	* README.en: Update for the recent ML address.
 
 1999-10-19  Katsumi Yamaoka   <yamaoka@jpl.org>
 
