--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2001-02-02  Keiichi Suzuki  <keiichi@nanap.org>
+
+	* mu-cite.el (top level): Require `poem' instead of `poe' for
+	`char-next-index'.
+
 2000-09-04  Katsumi Yamaoka   <yamaoka@jpl.org>
 
 	* mu-cite.el (mu-cite-default-methods-alist): Don't include
