--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2006-12-12  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* MU-MK (compile-mu-package): Use batch-update-directory-autoloads
+	if it is available instead of batch-update-directory.
+
 2006-12-11  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* MU-CFG (PACKAGEDIR): Check for
