--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-12-13  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* MU-CFG (PACKAGEDIR): Avoid an error with Emacs.
+
 2006-12-12  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* MU-MK (compile-mu-package): Use batch-update-directory-autoloads
