--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-12-20  Katsumi Yamaoka  <yamaoka@jpl.org>
+
+	* README.en (What's MU): Update required version of APEL to 10.7
+	or later.
+
+	* MU-CFG (PACKAGEDIR): Use install-get-default-package-directory.
+
 2006-12-13  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* MU-CFG (PACKAGEDIR): Avoid an error with Emacs.
