mu-cite-pkg.el: New file (PR#1 in cvs-m17n-org/MU-CITE)

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2019-08-04  Ken Sato  <ksato9700>
+
+	* mu-cite-pkg.el: New file (PR#1 in cvs-m17n-org/MU-CITE).
+
 2019-02-27  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* mu-cite.el (mu-cite-get-original-header): Use original timezone.
