--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2020-10-12  Tatsuya Kinoshita  <tats@vega.ocn.ne.jp>
+
+	* mu-cite.el (mu-cite-get-field-value): Unfold the value,
+	and remove leading/trailing white spaces from the value.  (PR#2)
+
 2019-08-04  Ken Sato  <ksato9700>
 
 	* mu-cite-pkg.el: New file (PR#1 in cvs-m17n-org/MU-CITE).
