--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2020-11-03  Tatsuya Kinoshita  <tats@vega.ocn.ne.jp>
+
+	* mu-cite.el: Require `pym' (issue #4).
+
 2020-10-13  Katsumi Yamaoka  <yamaoka@jpl.org>
 
 	* mu-register.el: Autoload pces for *-as-coding-system functions.
